...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="183dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/amount"
            android:shadowColor="@color/colorPrimaryText"
            android:inputType="numberDecimal" />
...

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/ic_arrow_forward"
...
