<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/addAmountFragment">

    <fragment
        android:id="@+id/addAmountFragment"
        android:name="com.mercado.libre.paymentapp.mvp.views.fragments.AddAmountFragment"
        android:label="fragment_add_amount"
        tools:layout="@layout/fragment_add_amount" >
        <action
            android:id="@+id/action_addAmountFragment_to_pickPaymentFragment"
            app:destination="@id/pickPaymentFragment"
            app:enterAnim="@anim/right_in"
            app:exitAnim="@anim/left_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_out"/>
        <argument
            android:name="amount"
            android:defaultValue="0"
            app:type="integer" />
        <argument
            android:name="paymentName"
            android:defaultValue='no_name'
            app:type="string" />
        <argument
            android:name="bankName"
            android:defaultValue='no_name'
            app:type="string" />
        <argument
            android:name="payerCosts"
            android:defaultValue='no_payer'
            app:type="string" />
    </fragment>
    <fragment
        android:id="@+id/pickPaymentFragment"
        android:name="com.mercado.libre.paymentapp.mvp.views.fragments.PickPaymentFragment"
        android:label="fragment_pick_payment"
        tools:layout="@layout/fragment_pick_payment" >
        <action
            android:id="@+id/action_pickPaymentFragment_to_pickBankFragment"
            app:destination="@id/pickBankFragment"
            app:enterAnim="@anim/right_in"
            app:exitAnim="@anim/left_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_out"/>
        <argument
            android:name="amount"
            android:defaultValue="0"
            app:type="integer" />
    </fragment>
    <fragment
        android:id="@+id/pickBankFragment"
        android:name="com.mercado.libre.paymentapp.mvp.views.fragments.PickBankFragment"
        android:label="fragment_pick_bank"
        tools:layout="@layout/fragment_pick_bank" >
        <action
            android:id="@+id/action_pickBankFragment_to_pickFeesFragment2"
            app:destination="@id/pickFeesFragment"
            app:enterAnim="@anim/right_in"
            app:exitAnim="@anim/left_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_out"/>
        <argument
            android:name="amount"
            android:defaultValue="0"
            app:type="integer" />
        <argument
            android:name="paymentId"
            android:defaultValue='no_id'
            app:type="string" />
        <argument
            android:name="paymentName"
            android:defaultValue='no_name'
            app:type="string" />
    </fragment>
    <fragment
        android:id="@+id/pickFeesFragment"
        android:name="com.mercado.libre.paymentapp.mvp.views.fragments.PickFeesFragment"
        android:label="fragment_pick_fees"
        tools:layout="@layout/fragment_pick_fees" >
        <action
            android:id="@+id/action_pickFeesFragment_to_addAmountFragment2"
            app:destination="@id/addAmountFragment"
            app:enterAnim="@anim/right_in"
            app:exitAnim="@anim/left_out"
            app:popEnterAnim="@anim/left_in"
            app:popExitAnim="@anim/right_out"/>
        <argument
            android:name="amount"
            android:defaultValue="0"
            app:type="integer" />
        <argument
            android:name="paymentId"
            android:defaultValue='no_id'
            app:type="string" />
        <argument
            android:name="paymentName"
            android:defaultValue='no_name'
            app:type="string" />
        <argument
            android:name="bankId"
            android:defaultValue='no_id'
            app:type="string" />
        <argument
            android:name="bankName"
            android:defaultValue='no_name'
            app:type="string" />
    </fragment>
</navigation>