...
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_cuotas"
        app:layout_constraintBottom_toTopOf="@+id/spnFees"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <fr.ganfra.materialspinner.MaterialSpinner
...

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDone"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
...
